Update: Maven submodules to make plugin compatible from 1.18 to 1.21